--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,22 @@ build/CMakeFiles/Stack.dir/progress.make
 build/CMakeFiles/Stack.dir/stack.c.obj
 build/CMakeFiles/Stack.dir/stack.c.obj.d
 build/Testing/Temporary/LastTest.log
+build/libLinkedList.a
+build/.cmake/api/v1/reply/cache-v2-5366aa503a0f4c4350f4.json
+build/.cmake/api/v1/reply/codemodel-v2-5d601166c4c3b3c70657.json
+build/.cmake/api/v1/reply/index-2023-05-11T17-44-32-0505.json
+build/.cmake/api/v1/reply/target-Chapter3-Debug-99448d5194d73747a6c2.json
+build/.cmake/api/v1/reply/target-LinkedList-Debug-6bc30b5392b33b4210d9.json
+build/CMakeFiles/LinkedList.dir/build.make
+build/CMakeFiles/LinkedList.dir/cmake_clean_target.cmake
+build/CMakeFiles/LinkedList.dir/cmake_clean.cmake
+build/CMakeFiles/LinkedList.dir/compiler_depend.internal
+build/CMakeFiles/LinkedList.dir/compiler_depend.make
+build/CMakeFiles/LinkedList.dir/compiler_depend.ts
+build/CMakeFiles/LinkedList.dir/depend.make
+build/CMakeFiles/LinkedList.dir/DependInfo.cmake
+build/CMakeFiles/LinkedList.dir/flags.make
+build/CMakeFiles/LinkedList.dir/link.txt
+build/CMakeFiles/LinkedList.dir/linkedList.c.obj
+build/CMakeFiles/LinkedList.dir/linkedList.c.obj.d
+build/CMakeFiles/LinkedList.dir/progress.make
