--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,11 @@ include(CTest)
 enable_testing()
 
 add_library(Stack STATIC stack.c stack.h)
+add_library(LinkedList STATIC linkedList.c linkedList.h)
 
 add_executable(Chapter3 main.c)
 target_link_libraries(Chapter3 PUBLIC Stack)
+target_link_libraries(Chapter3 PUBLIC LinkedList)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
