add reverse function for Linked List

--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,8 @@ build/CMakeFiles/LinkedList.dir/link.txt
 build/CMakeFiles/LinkedList.dir/linkedList.c.obj
 build/CMakeFiles/LinkedList.dir/linkedList.c.obj.d
 build/CMakeFiles/LinkedList.dir/progress.make
+build/.cmake/api/v1/reply/index-2023-05-12T17-04-09-0260.json
+build/Testing/TAG
+build/Testing/20230512-1736/Test.xml
+build/Testing/Temporary/CTestCostData.txt
+build/Testing/Temporary/LastTest_20230512-1736.log
