add tic tac toe data structure

--- a/.gitignore
+++ b/.gitignore
@@ -284,3 +284,21 @@ build/Testing/TAG
 build/Testing/20230512-1736/Test.xml
 build/Testing/Temporary/CTestCostData.txt
 build/Testing/Temporary/LastTest_20230512-1736.log
+build/libTicTacToe.a
+build/.cmake/api/v1/reply/codemodel-v2-af1caae85b370691fd5a.json
+build/.cmake/api/v1/reply/index-2023-05-14T16-44-52-0789.json
+build/.cmake/api/v1/reply/target-Chapter3-Debug-0adec15bdfebbe07c36a.json
+build/.cmake/api/v1/reply/target-TicTacToe-Debug-76f6ee2ad07272b76672.json
+build/CMakeFiles/TicTacToe.dir/build.make
+build/CMakeFiles/TicTacToe.dir/cmake_clean_target.cmake
+build/CMakeFiles/TicTacToe.dir/cmake_clean.cmake
+build/CMakeFiles/TicTacToe.dir/compiler_depend.internal
+build/CMakeFiles/TicTacToe.dir/compiler_depend.make
+build/CMakeFiles/TicTacToe.dir/compiler_depend.ts
+build/CMakeFiles/TicTacToe.dir/depend.make
+build/CMakeFiles/TicTacToe.dir/DependInfo.cmake
+build/CMakeFiles/TicTacToe.dir/flags.make
+build/CMakeFiles/TicTacToe.dir/link.txt
+build/CMakeFiles/TicTacToe.dir/progress.make
+build/CMakeFiles/TicTacToe.dir/tictactoe.c.obj
+build/CMakeFiles/TicTacToe.dir/tictactoe.c.obj.d
