add solution for anagrams

--- a/.gitignore
+++ b/.gitignore
@@ -302,3 +302,21 @@ build/CMakeFiles/TicTacToe.dir/link.txt
 build/CMakeFiles/TicTacToe.dir/progress.make
 build/CMakeFiles/TicTacToe.dir/tictactoe.c.obj
 build/CMakeFiles/TicTacToe.dir/tictactoe.c.obj.d
+build/libAnagram.a
+build/.cmake/api/v1/reply/codemodel-v2-89307a3ba3986e79d8be.json
+build/.cmake/api/v1/reply/index-2023-05-15T16-17-15-0768.json
+build/.cmake/api/v1/reply/target-Anagram-Debug-aaee7dc16828fc2c5364.json
+build/.cmake/api/v1/reply/target-Chapter3-Debug-12bab0968edefbcd7697.json
+build/CMakeFiles/Anagram.dir/anagram.c.obj
+build/CMakeFiles/Anagram.dir/anagram.c.obj.d
+build/CMakeFiles/Anagram.dir/build.make
+build/CMakeFiles/Anagram.dir/cmake_clean_target.cmake
+build/CMakeFiles/Anagram.dir/cmake_clean.cmake
+build/CMakeFiles/Anagram.dir/compiler_depend.internal
+build/CMakeFiles/Anagram.dir/compiler_depend.make
+build/CMakeFiles/Anagram.dir/compiler_depend.ts
+build/CMakeFiles/Anagram.dir/depend.make
+build/CMakeFiles/Anagram.dir/DependInfo.cmake
+build/CMakeFiles/Anagram.dir/flags.make
+build/CMakeFiles/Anagram.dir/link.txt
+build/CMakeFiles/Anagram.dir/progress.make
